packages/svelte/tests/validator/samples/animation-each-with-whitespace/input.svelte
<script>
	function flip() {}
</script>

<div>
	{#each [] as n (n)} <div animate:flip></div> {/each}
</div>
